<resources>
    <string name="app_name">PUSHTech example app</string>
    <string name="activity_web_view_title">Loading...</string>
    <string name="configuration_device_id_title">Device id</string>
    <string name="tab_purchase">Purchase</string>
    <string name="tab_social">Social</string>
    <string name="tab_user_attributes">User</string>
    <string name="fragment_metrics_purchase_product">Create a product</string>
    <string name="fragment_metrics_purchase_add_cart">Add cart</string>
    <string name="fragment_metrics_purchase_remove_cart">Remove from cart</string>
    <string name="fragment_metrics_purchase_purchase">Purchase product</string>
    <string name="fragment_metrics_purchase_num_cart">Number of products in cart</string>
    <string name="fragment_metrics_purchase_hint_product_uuid">Product UUID</string>
    <string name="fragment_metrics_purchase_hint_product_name">Product name</string>
    <string name="fragment_metrics_purchase_hint_product_price">Product Price</string>
    <string name="fragment_metrics_purchase_create_product">Create Product</string>
    <string name="fragment_metrics_purchase_send_metrics">Send metrics</string>
    <string name="cancel">Cancel</string>
    <string name="fragment_metrics_social_facebook">Facebook</string>
    <string name="fragment_metrics_social_login">Login</string>
    <string name="fragment_metrics_social_logout">Logout</string>
    <string name="fragment_metrics_social_hint_facebook_id">Facebook id</string>
    <string name="fragment_metrics_social_hint_facebook_friends">Number of friends</string>
    <string name="fragment_metrics_social_send">Send</string>
    <string name="fragment_metrics_social_hint_google_id">Google id</string>
    <string name="fragment_metrics_social_google">Google plus</string>
    <string name="fragment_metrics_social_hint_twitter_id">Twitter id</string>
    <string name="fragment_metrics_social_twitter">Twitter</string>
    <string name="fragment_metrics_social_hint_twitter_followers">Twitter followers</string>
    <string name="fragment_metrics_user_birthday">Birthday</string>
    <string name="fragment_metrics_user_login_generic">Login generic</string>
    <string name="fragment_metrics_user_logout_generic">Logout generic</string>
    <string name="fragment_metrics_user_register_generic">Register generic</string>
    <string name="city_hint">City</string>
    <string name="user_id_hint">User id</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="dialog_success">Success</string>
    <string name="dialog_social_metrics_send">Social metrics send</string>
    <string name="dialog_user_metrics_send">User metrics send</string>
    <string name="fragment_metrics_purchase_add_to_cart">Add to cart</string>
    <string name="fragment_metrics_purchase_remove_from_cart">Remove from cart</string>
    <string name="dialog_add">ADD</string>
    <string name="dialog_remove">Remove</string>
    <string name="dialog_purchase_resume">You bought %1$s products for %2$s %3$s</string>
    <string name="dialog_info">Info</string>
    <string name="dialog_number_products_cart">You hace a %1$s products in your cart</string>
</resources>
